<resources>
    <string name="app_name">Sokoban</string>
    <string name="app_niveau_un">Plateau par défaut</string>
    <string name="app_niveau_deux">Plateau fait en fichier texte</string>
    <string name="app_niveau_trois">Plateau stocké en BDD</string>
    <string name="app_niveau_quatre">Plateau avec une API</string>
    <string name="app_developpeur">Adélaïde LOUIS, Arthur QUEMERAS, Kim-Anh TRAN</string>
    <string name="app_developpeur_group">LP DAWIN A</string>
    <string name="back">Retour</string>
    <string name="reset">Reset</string>
    <string name="goHome">Retourner au menu</string>
    <string name="nombre_de_lignes">Nombre de lignes</string>
    <string name="nombre_de_colonnes">Nombre de colonnes</string>
    <string name="id_du_plateau">Id du plateau</string>
    <string name="description_du_plateau">Description du plateau</string>
    <string name="button">Button</string>
</resources>